# NativeDisplayImage

./: README.md  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RenderJNI.cpp  android_tools.h  buffer.cpp  buffer.h  texture.cpp  texture.h
app/src/main/cpp/SIFT/: KeyPoint.h  SIFT.cpp  SIFT.h  shaders.h
app/src/main/cpp/common/: android_tools.h
app/src/main/java/com/example/app/: MainActivity.java  RenderJNI.java
app/src/main/java/com/example/app/gl/: ConfigChooser.java  ContextFactory.java  EGLUtils.java  GLView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
openCVLibrary310/: CMakeLists.txt
