cmake_minimum_required(VERSION 3.4.1)

#openCV config
#set(pathToProject C:/Users/Test-PC/Desktop/Test/Camera)
#set(pathToOpenCv D:/Android/CodeProject/OpenCV-android-sdk)

#include_directories(${pathToOpenCv}/sdk/native/jni/include)

#add_library( lib_opencv STATIC IMPORTED )
#set_target_properties(lib_opencv
                   #   PROPERTIES IMPORTED_LOCATION
                  #    ${pathToProject}/app/src/main/jniLibs/${ANDROID_ABI}/libopencv_java3.so)
